--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=sqh-administration-api
 #url para desarrollo
 spring.datasource.url=jdbc:mysql://localhost:3306/sqh_admin_db
 spring.datasource.username=root
-spring.datasource.password=root1234321
+spring.datasource.password=Root_1234321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuraci\u00f3n de JPA (Opcional, pero recomendado)
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
